<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.com.ipn.finalproject.LogInActivity"
    android:orientation="vertical"
    android:background="@drawable/blue_wallpaper">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6681d4fa"
            />

        <LinearLayout
            android:id="@+id/log_in_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/log_in_container_padding"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:id="@+id/log_in_card_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:id="@+id/log_in_card_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/log_in_form_card_padding"
                                android:background="@color/logInCardTitleBackground"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/log_in_title"
                                    android:textStyle="bold"
                                    android:textColor="@android:color/white"
                                    android:textSize="@dimen/log_in_card_title_text"
                                    />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/logInCardTitleDescription"
                                    android:text="@string/log_in_title_description"
                                    />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_below="@id/log_in_card_title"
                                android:id="@+id/log_in_card_body"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/log_in_form_card_padding"
                                android:orientation="vertical">

                                <android.support.design.widget.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    >

                                    <android.support.design.widget.TextInputEditText
                                        android:id="@+id/log_in_input_email"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:lines="1"
                                        android:hint="@string/log_sign_hint_email"
                                        android:inputType="textEmailAddress"
                                        android:theme="@style/TextInputTheme"
                                        />

                                </android.support.design.widget.TextInputLayout>

                                <android.support.design.widget.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    >

                                    <android.support.design.widget.TextInputEditText
                                        android:id="@+id/log_in_input_password"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:lines="1"
                                        android:hint="@string/log_sign_hint_password"
                                        android:inputType="textPassword"
                                        android:theme="@style/TextInputTheme"
                                        />

                                </android.support.design.widget.TextInputLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/logInTextInputColorActive"
                                    android:text="@string/log_in_button_register"
                                    android:onClick="showSignUpDialog"
                                    android:padding="@dimen/log_in_card_register_padding"/>

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="10dp"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="right">

                                    <android.support.v7.widget.AppCompatButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/log_in_button_submit"
                                        android:onClick="logIn"
                                        android:theme="@style/AppTheme.LightRipple"
                                        android:backgroundTint="@color/logInCardTitleBackground"
                                        android:textColor="@android:color/white"
                                        />

                                </LinearLayout>


                            </LinearLayout>

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:theme="@style/AppTheme.LightRipple"/>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
