<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiagnosticActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/diagnostic_collapsing_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/diagnostic_collapsing_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/diagnostico"
                app:layout_collapseMode="parallax"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/diagnostic_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/diagnostic_scroll_padding">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:padding="0dp"
            app:cardElevation="@dimen/diagnostic_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/diagnostic_card_content_padding"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width
                            ="@dimen/diagnostic_card_content_warning_width_height"
                        android:layout_height
                            ="@dimen/diagnostic_card_content_warning_width_height"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_warning"
                        android:tint=
                            "@color/light_blue_darken_4"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/diagnostic_card_content_title_size"
                        android:text="@string/diagnostic_warnings_title"
                        android:textAllCaps="true"
                        android:textColor="@color/light_blue_darken_4"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/logInDescriptionText"
                        android:text="@string/diagnostic_warnings_description"
                        android:textSize="@dimen/diagnostic_card_content_text_size"
                        />

                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diagnostic_warnings_button"
                    android:padding="25dp"
                    android:theme="@style/AppTheme.LightRipple"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/diagnostic_card_content_title_size"
                    android:layout_margin="0dp"
                    android:onClick="startActivity"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:theme="@style/AppTheme.LightRipple"/>








</android.support.design.widget.CoordinatorLayout>